assets/css/screen.css
/* ... */
.icon-feed:before {
    content: "\e001";
}
.icon-twitter:before {
    content: "\e002";
    font-size: 1.1em;
}
.icon-google-plus:before {
    content: "\e003";
}
.icon-facebook:before {
    content: "\e004";
}


/* ==========================================================================
   2. General - Setting up some base styles
   ========================================================================== */

html {
    height: 100%;
    max-height: 100%;
    font-size: 62.5%;
}

body {
    height: 100%;
    max-height: 100%;
    /*font-family: 'Droid Serif', serif;*/
    font-family: 'Roboto Slab', serif;
    font-size: 2.0rem;
    line-height: 1.6em;
    color: #3A4145;
}

::-moz-selection {
    color: #222;
    background: #D6EDFF;
    text-shadow: none;
}

::selection {
    color: #222;
    background: #D6EDFF;
    text-shadow: none;
}
.left {
    float: left;
}
.right {
    float: right;
}
.clear {
    clear: both;
}
h1, h2, h3,
h4, h5, h6 {
    text-rendering: optimizeLegibility;
    line-height: 1;
    margin-top: 0;
    margin-bottom: 10px;
    font-family: 'Open Sans', sans-serif;
}
h3, h4, h5, h6 {
    text-rendering: optimizeLegibility;
    line-height: 120%;
    margin-top: 0;
    font-family: 'Open Sans', sans-serif;
    margin-bottom: 0%;
}

h1 {
    font-size: 5rem;
    line-height: 1.2em;
    letter-spacing: -2px;
    text-indent: -3px;
}

h2 {
    font-size: 4rem;
    line-height: 1.2em;
    letter-spacing: -1px;
    text-indent: -2px;
}

h3 {
    font-size: 3.5rem;
}

h4 {
    font-size: 3rem;
}

h5 {
    font-size: 2.5rem;
}

h6 {
    font-size: 2rem;
}

a {
    color: inherit;
    transition: all ease 0.3s;
    -webkit-transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
}

a:hover {
    color: #86c440;
}

a.btn {
    
    text-decoration: none;
    background-color: #9fd067;
    border-radius: 6px;
    -webkit-border-radius: 6px;
    color: white;
    display: inline-block;
    font-size: 16px;
    letter-spacing: 1px;
    margin: 0;
    overflow: visible;
    padding: 10px 20px 10px 20px;
    position: relative;
    margin-top: 2rem;
    cursor: pointer;
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    font-weight: lighter;

}

a.btn:hover {
    background: #86c440;
}

#header-arrow {
    font-size: 140px;
    margin: -10px auto;
    text-align: center;
    position: absolute;
    width: 100%;
    left: 0;
    bottom: -120px;
    cursor: pointer;
    opacity: 0.6;
    transition: all ease 0.3s;
    -webkit-transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
}
#header-arrow:hover {
    opacity: 0.9;
}

h1 a, h2 a, h3 a,
h4 a, h5 a, h6 a {
    /*color: #50585D;*/
}


p, ul, ol {
    margin: 1em 0;
}

ol ol, ul ul,
ul ol, ol ul {
    margin: 0.4em 0;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #efefef;
    margin: 3.2em 0;
    padding: 0;
}

blockquote {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 1.0em 0 1.0em -2.2em;
    padding: 0 0 0 1.0em;
    /*border-left: #4a4a4a 0.4em solid;*/
    font-weight: lighter;
}

blockquote p {
    margin: 0.8em 0;
}
.quo {
    /*float: left;*/
    margin-right: 10px;
    margin-left: 10px;
    font-size: 20px;
}

blockquote small {
    display: inline-block;
    margin: 0.8em 0 0.8em 1.5em;;
    font-size:0.9em;
    color: #ccc;
}

blockquote small:before { content: '\2014 \00A0'; }

blockquote cite {
    font-weight:bold;
}

blockquote cite a { font-weight: normal; }


dl {
    margin: 1.6em 0;
}

dl dt {
    float: left;
    width: 180px;
    overflow: hidden;
    clear: left;
    text-align: right;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: bold;
    margin-bottom: 1em
}

dl dd {
    margin-left: 200px;
    margin-bottom: 1em
}

mark {
    background-color: #ffc336;
}

code, tt {
    padding: 3px 5px;
    font-family: Inconsolata, monospace, sans-serif;
    font-size: 0.75em;
    white-space: pre;
    border: 1px solid #E3EDF3;
    background: #F7FAFB;
    border-radius: 2px;
    color: #3A4145;
}

pre {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 1.6em 0;
    border: 1px solid #E3EDF3;
    width: 100%;
    padding: 10px;
    font-family: Inconsolata, monospace, sans-serif;
    font-size: 0.9em;
    white-space: pre;
    overflow: auto;
    background: #F7FAFB;
    border-radius: 3px;
}

pre code, tt {
    font-size: inherit;
    white-space: -moz-pre-wrap;
    white-space: pre-wrap;
    background: transparent;
    border: none;
    padding: 0;
}

kbd {
    display: inline-block;
    margin-bottom: 0.4em;
    padding: 1px 8px;
    border: #ccc 1px solid;
    color: #666;
    text-shadow: #fff 0 1px 0;
    font-size: 0.9em;
    font-weight: bold;
    background: #f4f4f4;
    border-radius: 4px;
    box-shadow: 
        0 1px 0 rgba(0, 0, 0, 0.2), 
        0 1px 0 0 #fff inset;
}

table {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 1.6em 0;
    width:100%;
    max-width: 100%;
    background-color: transparent;
}

table th,
table td {
    padding: 8px;
    line-height: 20px;
    text-align: left;
    vertical-align: top;
    border-top: 1px solid #efefef;
}

table th { color: #000; }

table caption + thead tr:first-child th,
table caption + thead tr:first-child td,
table colgroup + thead tr:first-child th,
table colgroup + thead tr:first-child td,
table thead:first-child tr:first-child th,
table thead:first-child tr:first-child td {
    border-top: 0;
}

table tbody + tbody { border-top: 2px solid #efefef; }

table table table { background-color: #fff; }

table tbody > tr:nth-child(odd) > td,
table tbody > tr:nth-child(odd) > th {
    background-color: #f6f6f6;
}

table.plain {
    tbody > tr:nth-child(odd) > td,
    tbody > tr:nth-child(odd) > th {
        background: transparent;
    }
}
li {
  list-style-type: none;
  margin-left: 30px;
}
.bult {
    display: inline;
    float: left;
    padding-top: 7px;
}
/* ... */

